Applies last and first operations to sets for problems 51 and 77 instead of accessing end items with indexes 0 and length-1.